--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Моя презентация</title>
 </head>
-<body>
+<body<a href="krossvordRU.html">Русский кроссворд</a>>
 
     <p>
         Нажмите, чтобы скачать или открыть презентацию:
@@ -12,5 +12,5 @@
         <a href="index.html">Файл проверки работы с кириллицей .html</a>
     </p>
 
-</body>
+</body<a href="krossvordEN.html">Англиский кроссворд</a>>
 </html>
