--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Моя презентация</title>
 </head>
 <body<a href="krossvordRU.html">Русский кроссворд</a>>
-
+file:///home/user/2025/104C/1курс Сайт/krossvordRU.html
     <p>
         Нажмите, чтобы скачать или открыть презентацию:
         <a href="СетьВводный.pptx">Презентация в формате .pptx</a>
@@ -13,4 +13,5 @@
     </p>
 
 </body<a href="krossvordEN.html">Англиский кроссворд</a>>
+ file:///home/user/2025/104C/1курс Сайт/krossvordEN.html   
 </html>
