--- a/index.html
+++ b/index.html
@@ -1,17 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Моя презентация</title>
+    <title>Мой блог</title>
 </head>
-<body<a href="krossvordRU.html">Русский кроссворд</file:///home/user/2025/104C/1%D0%BA%D1%83%D1%80%D1%81%20%D0%A1%D0%B0%D0%B9%D1%82/krossvordRU.html>>
-
-    <p>
-        Нажмите, чтобы скачать или открыть презентацию:
-        <a href="СетьВводный.pptx">Презентация в формате .pptx</a>
-        Нажмите, чтобы скачать или открыть index.html:
-        <a href="index.html">Файл проверки работы с кириллицей .html</a>
-    </p>
-
-</body<a href="krossvordEN.html">Англиский кроссворд</file:///home/user/2025/104C/1%D0%BA%D1%83%D1%80%D1%81%20%D0%A1%D0%B0%D0%B9%D1%82/krossvordEN.html>>
+<body<
+</body<
    
 </html>
