--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>Мой блог</title>
 </head>
 <body<
+    <p>Иконки:<a href="https://www.flaticon.com/ru/free-icons/-" title="новый год иконки">Новый год иконки от Milya Shaykh - Flaticon</a> 
+</p>
 </body<
    
 </html>
