--- a/index.html
+++ b/index.html
@@ -3,7 +3,19 @@
 <head>
     <title>Мой блог</title>
 </head>
-<body<
+<body>
+    <h2> 1 декабря, 2025</h2>
+<img src=“Icons/free-icon-santa-claus-6259522.png” alt=“Новый год”>
+Поздравление с Наступающим 2026 годом читайте <a href=“Congratulations2026.html”> здесь.</a>
+<h2> 1 декабря  , 2025</h2>
+<p>
+Я сделала Новогодние кроссворды для сайта <a href=“http://адрес https://github.com/Dasha2341/muzic-insideс”  title=“Блог моего друга”https://github.com/Dasha2341/muzic-inside</a>
+</p>
+<h2> 1 декабря , 2025</h2>
+<blockquote>Путешествие в тысячу миль начинается с одного шага (Лао Цзы) </blockquote>
+<p>
+Оставляю в прошлом скучную неинтересную локальную файловую систему ради Всемирной паутины.
+</p>
     <p>Иконки:<a href="https://www.flaticon.com/ru/free-icons/-" title="новый год иконки">Новый год иконки от Milya Shaykh - Flaticon</a> 
 </p>
 </body<
