--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Мой блог</title>
+    <link type=“text/css” rel=“stylesheet” href=“style.css” />
 </head>
 <body>
     <h2> 1 декабря, 2025</h2>
