--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link type=“text/css” rel=“stylesheet” href=“style.css” />
 </head>
 <body>
+    <blockquote class=“q”>Путешествие в тысячу миль начинается с одного шага (Лао Цзы) </blockquote>
     <h2> 1 декабря, 2025</h2>
 <img src=“Icons/free-icon-santa-claus-6259522.png” alt=“Новый год”>
 Поздравление с Наступающим 2026 годом читайте <a href=“Congratulations2026.html”> здесь.</a>
