--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link type=“text/css” rel=“stylesheet” href=“style.css” />
 </head>
 <body>
+    <p>Создано: 14 января 2026 года</p>
+ <p>Домен - 
     <blockquote class=“q”>Путешествие в тысячу миль начинается с одного шага (Лао Цзы) </blockquote>
     <h2> 1 декабря, 2025</h2>
 <img src=“Icons/free-icon-santa-claus-6259522.png” alt=“Новый год”>
