--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 </head>
 <body>
     <p>Создано: 14 января 2026 года</p>
- <p>Домен - 
+ <p>Домен - https://zoyahfc.github.io/i-word/ </p>
+ <p>Напишите мне: <a href="mailto:chikinazoya@gmail.com">diana@example.com</a></p>
+    
     <blockquote class=“q”>Путешествие в тысячу миль начинается с одного шага (Лао Цзы) </blockquote>
     <h2> 1 декабря, 2025</h2>
 <img src=“Icons/free-icon-santa-claus-6259522.png” alt=“Новый год”>
