--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <p>Создано: 14 января 2026 года</p>
  <p>Домен - https://zoyahfc.github.io/i-word/ </p>
- <p>Напишите мне: <a href="mailto:chikinazoya@gmail.com">diana@example.com</a></p>
+ <p>Напишите мне: <a href="mailto:chikinazoya@gmail.com"></a></p>
     from urllib.parse import urlparse
 
 def parse_domain(url):
