--- a/index.html
+++ b/index.html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
+     </style>
+    <meta charset="UTF-8" />
+  <title>i-word</title>
+  <style>
+    body {
+      background-color: #1e90ff;
+      color: white; 
+      font-family: Arial, sans-serif;
+      padding: 20px;
+      margin: 0 auto;
+      max-width: 800px;
+    }
+  </style>
     <title>Мой блог</title>
     <link type=“text/css” rel=“stylesheet” href=“style.css” />
 </head>
