--- a/index.html
+++ b/index.html
@@ -1,19 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-     </style>
-    <meta charset="UTF-8" />
-  <title>i-word</title>
-  <style>
-    body {
-      background-color: #1e90ff;
-      color: white; 
-      font-family: Arial, sans-serif;
-      padding: 20px;
-      margin: 0 auto;
-      max-width: 800px;
-    }
-  </style>
+      <style>
+  body {
+    color: #003366;                /* Тёмно-синий текст */
+    font-family: Arial, sans-serif;
+  }
+</style>
     <title>Мой блог</title>
     <link type=“text/css” rel=“stylesheet” href=“style.css” />
 </head>
