--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ for key, value in result.items():
     <h2> 1 декабря, 2025</h2>
 <img src=“Icons/free-icon-santa-claus-6259522.png” alt=“Новый год”>
 Поздравление с Наступающим 2026 годом читайте <a href=“Congratulations2026.html”> здесь.</a>
-<h2> 1 декабря  , 2025</h2>
+<h2> 15 октября  , 2025</h2>
 <p>
 Я сделала Новогодние кроссворды для сайта <a href=“http://адрес https://github.com/Dasha2341/muzic-insideс”  title=“Блог моего друга”https://github.com/Dasha2341/muzic-inside</a>
 </p>
