--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
  <p>Домен - https://zoyahfc.github.io/i-word/ </p>
  <p>Напишите мне: <a href="mailto:chikinazoya@gmail.com"></a></p>
   <div class="domain-info">
+        <h2> 20 декабря , 2025</h2>
     <strong>Структура домена сайта:</strong>
     <ul style="margin-top: 10px; margin-bottom: 0;">
       <li><strong>3-й уровень (пользователь):</strong> <code>zoyahfc</code></li>
