--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <p>
 Я сделала Новогодние кроссворды для сайта <a href=“http://адрес https://github.com/Dasha2341/muzic-insideс”  title=“Блог моего друга”https://github.com/Dasha2341/muzic-inside</a>
 </p>
-<h2> 1 декабря , 2025</h2>
+<h2> 1 сентября , 2025</h2>
 <blockquote>Путешествие в тысячу миль начинается с одного шага (Лао Цзы) </blockquote>
 <p>
 Оставляю в прошлом скучную неинтересную локальную файловую систему ради Всемирной паутины.
