--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
     <p style="margin-top: 12px; margin-bottom: 0;">
       <em>Путь к сайту: <code>/i-word/</code> — это имя репозитория на GitHub.</em>
     </p>
+        <h2>16 декабря, 2025</h2>
+        <p>Поздравляю с наступающим новым годом 2026! <a href=“Колядка </p>
+              
+        </h2>
   </div>
 
     <blockquote class=“q”>Путешествие в тысячу миль начинается с одного шага (Лао Цзы) </blockquote>
