--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link type=“text/css” rel=“stylesheet” href=“style.css” />
 </head>
 <body>
+      <h2> 1 декабря, 2025</h2>
+      <img src="Icons/free-icon-stars-2300158.png" alt="Новый год">
+    Поздравление с Наступающим 2026 годом читайте <a href="Congratulations2026.html"> здесь.</a>
     <p>Создано: 14 января 2026 года</p>
  <p>Домен - https://zoyahfc.github.io/i-word/ </p>
  <p>Напишите мне: <a href="mailto:chikinazoya@gmail.com"></a></p>
