--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
     </h2>
   </div>
 
+      <h2>24 декабря, 2025</h2>
+    <p>Поздравляю с наступающим рождеством 2026! <a href="Koladka.odt" title="колядка" download>Колядка 20.12.2025</a>
+    </p>
+    <p><a href="newTree.mp4" title="Новогодняя ёлка" download="Новогодняя_елка.mp4">Скачать видео с новогодней ёлкой (MP4)</a>
+    </p>
     <blockquote class=“q”>Путешествие в тысячу миль начинается с одного шага (Лао Цзы) </blockquote>
     <h2> 1 декабря, 2025</h2>
 <img src=“Icons/free-icon-santa-claus-6259522.png” alt=“Новый год”>
