--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
       <style>
   body {
-    color: #003366;                /* Тёмно-синий текст */
+    color: #003366;                
     font-family: Arial, sans-serif;
   }
 </style>
