--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-      <style>
-  body {
-    color: #003366;                
-    font-family: Arial, sans-serif;
-  }
-</style>
+      <!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8" />
+  <title>i-word</title>
+  <style>
+    body {
+      background-color: #d2b48c;
+      padding: 20px;
+      font-family: sans-serif;
+    }
+  </style>
+</head>
+<body>
+  <p>Создано: 14 января 2026 года</p>
+  <p>Домен -</p>
+  <p>Путешествие в тысячу миль начинается с одного шага (Лао Цзы)</p>
+</body>
+</html>
     <title>Мой блог</title>
     <link type=“text/css” rel=“stylesheet” href=“style.css” />
 </head>
