--- a/index.html
+++ b/index.html
@@ -84,6 +84,72 @@
   </div>
 
 </body>
+      <!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Расшифровка шифра Цезаря</title>
+  <style>
+    body {
+      background-color: #d2b48c; /* tan — цвет фона оригинального сайта */
+      color: black;
+      font-family: sans-serif;
+      padding: 20px;
+      margin: 0 auto;
+      max-width: 700px;
+      line-height: 1.6;
+    }
+
+    h1 {
+      text-align: center;
+      margin-bottom: 30px;
+    }
+
+    .task {
+      margin-bottom: 25px;
+      padding-bottom: 15px;
+      border-bottom: 1px dashed #8b6f4e;
+    }
+
+    .cipher {
+      font-weight: bold;
+      font-size: 18px;
+      color: #5a4a3a;
+    }
+
+    .plain {
+      font-size: 20px;
+      font-weight: bold;
+      color: #2c1e0f;
+      margin-top: 8px;
+    }
+
+    .key {
+      font-style: italic;
+      color: #6b5a4a;
+      margin-top: 5px;
+    }
+  </style>
+</head>
+<body>
+
+  <h1>Расшифровка шифра Цезаря</h1>
+
+  <div class="task">
+    <div class="cipher">а. ФХНЗКЧ</div>
+    <div class="plain">→ ПРИВЕТ</div>
+    <div class="key">Ключ: k = 5</div>
+  </div>
+
+  <div class="task">
+    <div class="cipher">б. ЦЩЕБФ</div>
+    <div class="plain">→ ВЕСНА</div>
+    <div class="key">Ключ: k = 20</div>
+  </div>
+
+</body>
+</html>
 </html>
    
 </html>
