--- a/index.html
+++ b/index.html
@@ -101,6 +101,20 @@
   </div>
 
 </body>
+      <body>
+
+  <h2>Шифрование фамилии «Чикина»</h2>
+  <p>Ключ шифра Цезаря: <strong>10</strong></p>
+  
+  <div class="result">Результат: ШЫУЫРХ</div>
+  
+  <div class="note">
+    Использован 32-буквенный русский алфавит без «Ё»:<br>
+    А Б В Г Д Е Ж З И Й К Л М Н О П Р С Т У Ф Х Ц Ч Ш Щ Ъ Ы Ь Э Ю Я
+  </div>
+
+</body>
+</html>
 </html>
 </html>
    
