--- a/index.html
+++ b/index.html
@@ -113,6 +113,62 @@
   </div>
 
 </body>
+    <h2> 21 января, 2025</h2> 
+      def gcd(a, b):
+    # Наибольший общий делитель (алгоритм Евклида)
+    while b:
+        a, b = b, a % b
+    return a
+
+def mod_inverse(e, phi):
+    # Нахождение d: e * d ≡ 1 (mod phi)
+    # Простой перебор (для малых чисел)
+    for d in range(1, phi):
+        if (e * d) % phi == 1:
+            return d
+    raise ValueError("Обратного элемента не существует")
+
+# Шаг 1: задаём простые числа
+p = 3
+q = 7
+
+# Шаг 2: вычисляем n и φ(n)
+n = p * q
+phi = (p - 1) * (q - 1)
+
+print(f"p = {p}, q = {q}")
+print(f"n = p * q = {n}")
+print(f"φ(n) = (p-1)*(q-1) = {phi}")
+
+# Шаг 3: выбираем открытую экспоненту e
+# Должно быть: 1 < e < phi и gcd(e, phi) = 1
+e = None
+for candidate in range(2, phi):
+    if gcd(candidate, phi) == 1:
+        e = candidate
+        break
+
+if e is None:
+    raise ValueError("Не удалось найти подходящее e")
+
+print(f"Выбрано e = {e} (взаимно просто с φ(n))")
+
+# Шаг 4: находим закрытую экспоненту d
+d = mod_inverse(e, phi)
+print(f"Найдено d = {d}, так как ({e} * {d}) mod {phi} = {(e * d) % phi}")
+
+# Результат
+print("\n🔑 Открытый ключ (e, n):", (e, n))
+print("🔒 Закрытый ключ (d, n):", (d, n))
+
+# Пример шифрования и расшифровки
+m = 2  # исходное сообщение (должно быть < n)
+c = pow(m, e, n)      # шифрование: c = m^e mod n
+m_decrypted = pow(c, d, n)  # расшифровка: m = c^d mod n
+
+print(f"\nСообщение: {m}")
+print(f"Шифротекст: {c}")
+print(f"Расшифровано: {m_decrypted}")
 </html>
 </html>
 </html>
