--- a/index.html
+++ b/index.html
@@ -196,6 +196,47 @@
 </script>
 
 </body>
+      <!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8" />
+  <title>i-word</title>
+  <style>
+    body {
+      background-color: #d2b48c;
+      padding: 20px;
+      font-family: sans-serif;
+    }
+
+    /* Подключение шрифта Pudelinka */
+    @font-face {
+      font-family: 'Pudelinka';
+      src: url('fonts/Pudelinka.ttf') format('truetype');
+      /* Можно добавить другие форматы при необходимости: .woff, .woff2 */
+    }
+
+    /* Стиль для даты 21 января 2025 */
+    .pudelinka-date {
+      font-family: 'Pudelinka', cursive;
+      font-size: 24px;
+      color: #333;
+    }
+  </style>
+</head>
+<body>
+
+  <!-- Пример остального контента -->
+  <h2>19 января, 2025</h2>
+  <!-- ... -->
+
+  <!-- Дата, которую нужно оформить шрифтом Pudelinka -->
+  <h2 class="pudelinka-date">21 января, 2025</h2>
+
+  <!-- Остальной контент -->
+  <!-- ... -->
+
+</body>
+</html>
 </html>
 </body>
 </html>     
