--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 </script>
 
 </body>
-      <!DOCTYPE html>
+    <!DOCTYPE html>
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
@@ -211,30 +211,32 @@
     /* Подключение шрифта Pudelinka */
     @font-face {
       font-family: 'Pudelinka';
-      src: url('fonts/Pudelinka.ttf') format('truetype');
-      /* Можно добавить другие форматы при необходимости: .woff, .woff2 */
+      src: url('https://zoyahfc.github.io/i-word/fonts/Pudelinka.ttf') format('truetype');
     }
 
-    /* Стиль для даты 21 января 2025 */
-    .pudelinka-date {
+    /* Класс для одной строки */
+    .pudelinka {
       font-family: 'Pudelinka', cursive;
-      font-size: 24px;
-      color: #333;
+      font-size: 28px;
+      margin: 20px 0;
     }
   </style>
 </head>
 <body>
 
-  <!-- Пример остального контента -->
+  <!-- Пример других записей -->
   <h2>19 января, 2025</h2>
+  <p>Определение ключей шифра Цезаря...</p>
+
+  <!-- Строка, которую нужно оформить шрифтом Pudelinka -->
+  <h2 class="pudelinka">21 января, 2025</h2>
+
+  <!-- Далее — ваш RSA-контент или другой контент -->
+  <h1>Учебный RSA: p = 3, q = 7</h1>
   <!-- ... -->
 
-  <!-- Дата, которую нужно оформить шрифтом Pudelinka -->
-  <h2 class="pudelinka-date">21 января, 2025</h2>
-
-  <!-- Остальной контент -->
-  <!-- ... -->
-
+</body>
+</html> 
 </body>
 </html>
       
