--- a/index.html
+++ b/index.html
@@ -234,7 +234,10 @@
   <!-- Далее — ваш RSA-контент или другой контент -->
   <h1>Учебный RSA: p = 3, q = 7</h1>
   <!-- ... -->
-
+@font-face {
+  font-family: 'Pudelinka';
+  src: url('fonts/Pudelinka.ttf') format('truetype');
+}
 </body>
 </html> 
 
